--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -733,7 +733,7 @@ body {
     transform: translateX(-50%) !important;
     bottom: 0 !important;
 
-    padding-bottom: calc(env(safe-area-inset-bottom, 0px) + 10px) !important;
+    padding-bottom: calc(env(safe-area-inset-bottom, 0px) + 10%) !important;
 
     width: auto !important;
     display: flex !important;
