--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -44,6 +44,12 @@ html, body {
     padding: 0;
     height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.site-footer {
+  margin-top: auto;
 }
 
 body {
