--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -295,11 +295,7 @@ body {
 }
 
 
-/* Optional: make the frame block a fixed width */
-#intro .right-column .frame-block {
-    max-width: 350px; /* adjust as needed */
-    text-align: right;
-}
+
 
 .frame-bottom-image {
     display: block; /* ensure it's treated like a block element */
@@ -748,6 +744,17 @@ footer {
   #top-image {
           display: none !important;
       }
+
+  .frame-bottom-image {
+    display: block; /* ensure it's treated like a block element */
+    width: 90%;
+    max-width: 250px;
+  }
+
+  .frame-block {
+    width: 90%;
+    max-width: 250px;
+  }
 
   #intro {
     height: 100vh; /* keep full screen */
